# microprocessor

./: .gitignore  FinalReport.md  HOWTO.md  Makefile  README.md  TODO.md  netlist_simulator.byte  run.sh
assembler/: Makefile  README.md  format_output.py
assembler/asm_microproc/: dune-project
assembler/tests/: add.x  branch.x  clk_goes_vroom.x  clk_real_time.x  double_dabble.x  double_dabble_tens.x  reader.ml  test.x  test_7seg.x  test_ram.x  total_double_dabble.x
netlist_simulator/: HOWTO.md  Makefile  README.md  graph.ml  graph_test.ml  netlist.ml  netlist_simulator.ml  scheduler.ml  scheduler_test.ml
netlist_simulator/doc/: Graph.html  Netlist_simulator.html  Scheduler.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Graph.html  type_Netlist_simulator.html  type_Scheduler.html
netlist_simulator/hdr/: graph.mli  netlist_simulator.mli  scheduler.mli
netlist_simulator/rapport/: rap.tex
netlist_simulator/src/: dune  graph.ml  netlist.ml  netlist_lexer.mll  netlist_simulator.ml  scheduler.ml
netlist_simulator/test/: ram2.net  tests.sh
proc_netlist/: Makefile  README.md  __init__.py  main.py  microproc.py  test.sh  test_fulladder.py  utils.py
proc_netlist/ALU/: __init__.py  adder.py  shift.py  sub.py
proc_netlist/alu/: README.md  TODO.md  __init__.py  alu.py  (+7 more)
report_architecture/: README.md  report.autre  report.aux  report.fich  report.md  report.py  report.tex
(+38 files in other folders)
